# LearnCG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
0/: CMakeLists.txt  main.cpp
1/: CMakeLists.txt  main.cpp  rasterizer.cpp
2/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
4/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  global.hpp
6/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Object.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  main.cpp
7/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
